--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "canvas": "^3.1.0",
     "formik": "^2.4.6",
     "next": "15.3.0",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
